<resources>
    <string name="app_name">Tesis</string>
    <string name="title_activity_maps">Map</string>
    <string name="obtenerUbicacionActual">Obtener Ubicacion Actual</string>
    <string name="marker_detail_latlng">(%1$.5f, %2$.5f)</string>
    <string name="conceder_permiso_de_ubicacion">Conceder Permiso de Ubicacion</string>
    <string name="partida">Partida</string>
    <string name="destino">Destino</string>
    <string name="find_path">Find path</string>
    <string name="enter_origin_address">Enter origin address</string>
    <string name="enter_destination_address">Enter destination address</string>
    <string name="todo">TODO</string>
    <string name="_0_km">0 km</string>
    <string name="_0_min">0 min</string>
</resources>