<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.tesis.MapsActivity">

    <EditText
        android:id="@+id/etOrigin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_origin_address"
        android:autofillHints="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/etDestination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_destination_address"
        android:importantForAutofill="no"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnFindPath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_path" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_distance"
            android:contentDescription="@string/todo"
            android:layout_marginStart="20dp" />

        <TextView
            android:id="@+id/tvDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/_0_km"
            android:layout_marginStart="5dp" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:src="@drawable/ic_clock"
            android:contentDescription="@string/todo"
            android:layout_marginStart="20dp" />

        <TextView
            android:id="@+id/tvDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/_0_min"
            android:layout_marginStart="5dp" />
    </LinearLayout>


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
